changed default tsConfig to deal with dup errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
     "noImplicitAny": false, //allows the use of type: any
     "removeComments": false,
@@ -6,5 +7,13 @@
     "target": "ES5",
     "sourceMap": true,
     "listFiles": false //shows files on transpile in the terminal
-  }
+  },
+  "exclude": [
+    "node_modules",
+
+    //we need to exclude these otherwise we'll get a duplicate error on compile
+    //it is not really known why there are 2 copies of these files, only the main is needed
+    "typings/browser",
+    "typings/browser.d.ts"
+  ]
 }
